# horus

./: .claude  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  install.sh  verify.sh
.github/workflows/: benchmarks.yml
benchmarks/: Cargo.toml  QUICK_START.md
benchmarks/src/: lib.rs  visualization.rs
benchmarks/tests/: run_tests.sh
docs-site/: MDX_GUIDELINES.md  README.md  next.config.js
docs-site/app/: globals.css  layout.tsx  manifest.ts  page.tsx
docs-site/app/[...slug]/: page.tsx
docs-site/components/: Breadcrumb.tsx  DocsSidebar.tsx
docs-site/content/docs/: advanced-examples.mdx  troubleshooting-runtime.mdx  troubleshooting.mdx
docs-site/content/docs/concepts/: architecture.mdx  core-concepts-shared-memory.mdx
docs-site/content/docs/development/: cli-reference.mdx  library-reference.mdx  parameters.mdx  simulation.mdx  testing.mdx
docs-site/content/docs/getting-started/: installation.mdx  quick-start.mdx
docs-site/content/docs/package-management/: configuration.mdx  package-management.mdx  using-prebuilt-nodes.mdx
docs-site/content/docs/performance/: benchmarks.mdx  performance.mdx
docs-site/content/docs/rust/api/: core.mdx
docs-site/content/docs/rust/examples/: basic-examples.mdx
docs-site/public/: search-index.json
horus/: Cargo.toml
horus/src/: lib.rs
horus_core/: Cargo.toml
horus_core/src/: driver.rs  error.rs  lib.rs
horus_core/src/communication/: hub.rs  link.rs  mod.rs  pod.rs
horus_core/src/communication/network/: direct.rs  router.rs
horus_core/src/core/: node.rs
horus_core/src/memory/: cuda_pool.rs  platform.rs  shm_region.rs  shm_topic.rs  tensor_pool.rs
horus_core/src/ml/: model_loader.rs
horus_core/src/scheduling/: ai_debug.rs  cloud_recording.rs  config.rs  deterministic.rs  distributed_recording.rs  mod.rs  record_replay.rs  scheduler.rs  zero_copy_recording.rs
horus_core/src/scheduling/executors/: mod.rs
horus_core/src/scheduling/intelligence/: profile.rs
horus_core/src/scheduling/jit/: compiler.rs  dataflow.rs  mod.rs
horus_core/tests/: scheduler_config_test.rs
horus_library/: Cargo.toml  lib.rs
horus_library/drivers/: factory.rs  mod.rs
horus_library/drivers/battery/: i2c.rs  mod.rs  simulation.rs
horus_library/drivers/bldc/: mod.rs  pwm.rs  simulation.rs
horus_library/drivers/bus/: linux_i2c.rs  linux_spi.rs  mod.rs  simulation.rs  socketcan.rs
horus_library/drivers/camera/: mod.rs  opencv.rs  simulation.rs  v4l2.rs
horus_library/drivers/depth_camera/: mod.rs  realsense.rs  simulation.rs
horus_library/drivers/digital_io/: gpio.rs  mod.rs  simulation.rs
horus_library/drivers/dynamixel/: mod.rs  serial.rs  simulation.rs
horus_library/drivers/encoder/: gpio.rs  mod.rs  simulation.rs
horus_library/drivers/force_torque/: ati_netft.rs  mod.rs  robotiq.rs  simulation.rs
horus_library/drivers/gps/: mod.rs  nmea.rs  simulation.rs
horus_library/drivers/imu/: bno055.rs  icm20948.rs  mod.rs  mpu6050.rs  simulation.rs
horus_library/drivers/joystick/: gilrs_driver.rs  mod.rs  simulation.rs
horus_library/drivers/keyboard/: crossterm_driver.rs  mod.rs  simulation.rs
horus_library/drivers/lidar/: mod.rs  rplidar.rs  simulation.rs
horus_library/drivers/modbus/: mod.rs  rtu.rs  simulation.rs
horus_library/drivers/motor/: gpio.rs  mod.rs  simulation.rs
horus_library/drivers/roboclaw/: mod.rs  serial.rs  simulation.rs
horus_library/drivers/serial/: mod.rs  simulation.rs  system.rs
horus_library/drivers/servo/: mod.rs  pca9685.rs  simulation.rs
horus_library/drivers/stepper/: gpio.rs  mod.rs  simulation.rs
horus_library/drivers/ultrasonic/: gpio.rs  mod.rs  simulation.rs
horus_library/messages/: cmd_vel.rs  geometry.rs  mod.rs  tensor.rs
horus_library/nodes/battery_monitor/: mod.rs
horus_library/nodes/camera/: mod.rs
horus_library/nodes/encoder/: mod.rs
horus_library/nodes/gps/: mod.rs
horus_library/nodes/imu/: mod.rs
horus_library/nodes/lidar/: mod.rs
horus_library/nodes/ultrasonic/: mod.rs
horus_library/tools/sim3d/: CONTRIBUTING.md  Cargo.toml  TODO.md
horus_library/tools/sim3d/assets/robots/fetch/: fetch.urdf
horus_library/tools/sim3d/assets/robots/hsr/: hsr.urdf
horus_library/tools/sim3d/assets/robots/quadcopter/: quadcopter.urdf
horus_library/tools/sim3d/benches/: ik_solver_bench.rs
horus_library/tools/sim3d/docs/: getting_started.md
horus_library/tools/sim3d/src/: main.rs
horus_library/tools/sim3d/src/cli/: mod.rs
horus_library/tools/sim3d/src/editor/: hierarchy.rs  inspector.rs  mod.rs  property_editor.rs  robot_browser.rs  scene_manager.rs  selection.rs  spawn_palette.rs  ui.rs  undo.rs  visual_editor.rs
horus_library/tools/sim3d/src/horus_bridge/: horus_transport.rs  mod.rs  transport_sync.rs
horus_library/tools/sim3d/src/rendering/: setup.rs
horus_library/tools/sim3d/src/scene/: gazebo_models.rs  usd_importer.rs
horus_library/tools/sim3d/src/systems/: monitor.rs
horus_library/tools/sim3d/src/ui/: dock.rs  floating_panels.rs  horus_panel.rs  keybindings.rs  layouts.rs  mod.rs  panel_manager.rs  panel_state.rs  physics_panel.rs  recording_panel.rs  rendering_panel.rs  sensor_panel.rs
horus_macros/src/: lib.rs  zero_copy.rs
horus_manager/: Cargo.toml  README.md
horus_manager/src/: discovery.rs  graph.rs  lib.rs  main.rs  monitor.rs  monitor_tui.rs  registry.rs  version.rs  yaml_utils.rs
horus_manager/src/commands/: clean.rs  deploy.rs  doctor.rs  init.rs  launch.rs  log.rs  mod.rs  msg.rs  new.rs  node.rs  param.rs  run.rs  test.rs  topic.rs
horus_manager/src/plugins/: executor.rs
horus_manager/src/security/: auth.rs
horus_manager/tests/: monitor_api_tests.rs  param_api_tests.rs
horus_py/src/: scheduler.rs
horus_py/tests/: conftest.py  test_cross_language.py
scripts/: prerelease.sh
tests/: README.md
tests/monitor/: README.md
tests/monitor/1pub/: horus.yaml  main.rs  test_discovery  test_discovery.rs
tests/monitor/robot_fleet_python/: .gitignore  horus.yaml  main.py
tests/monitor/robot_fleet_rust/: .gitignore  horus.yaml  main.rs
tests/sim2d/f1tenth_race/: README.md
(+2 files in other folders)
