[package]
name = "horus_benchmarks"
version = "0.1.7"
edition = "2021"
authors = ["HORUS Team"]
description = "Professional benchmark suite for HORUS robotics framework"
license = "Apache-2.0"

[lib]
name = "horus_benchmarks"
path = "src/lib.rs"

[[bench]]
name = "production_messages"
harness = false

[[bench]]
name = "link_performance"
harness = false

[[bench]]
name = "network_transport"
harness = false

[[bin]]
name = "ipc_benchmark"
path = "src/bin/ipc_benchmark.rs"
doc = true

# Production qualification test binaries
[[bin]]
name = "test_api_compatibility"
path = "src/bin/test_api_compatibility.rs"
doc = false

[[bin]]
name = "test_ipc_functionality"
path = "src/bin/test_ipc_functionality.rs"
doc = false

[[bin]]
name = "test_memory_safety"
path = "src/bin/test_memory_safety.rs"
doc = false

[[bin]]
name = "test_robotics_usage"
path = "src/bin/test_robotics_usage.rs"
doc = false

[[bin]]
name = "test_logging"
path = "src/bin/test_logging.rs"
doc = false

[[bin]]
name = "test_stress"
path = "src/bin/test_stress.rs"
doc = false

[[bin]]
name = "test_robotics_production"
path = "src/bin/test_robotics_production.rs"
doc = false

[[bin]]
name = "test_critical_production"
path = "src/bin/test_critical_production.rs"
doc = false

[[bin]]
name = "comparison_runner"
path = "src/bin/comparison_runner.rs"
doc = false

[[bin]]
name = "pod_benchmark"
path = "src/bin/pod_benchmark.rs"
doc = true

[dependencies]
horus = { path = "../horus" }
horus_core = { path = "../horus_core" }
horus_library = { path = "../horus_library" }
serde.workspace = true
serde_json = "1.0"
serde_bytes = "0.11"
serde_arrays = "0.1"
colored = "2.0"
anyhow = "1.0"
libc = "0.2"
rand = "0.8"  # For bootstrap confidence intervals
plotters = "0.3"  # For benchmark visualization
chrono = "0.4"    # For timestamps in reports

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }