[package]
name = "horus"
version = "0.1.7"
edition = "2021"
authors = ["HORUS Team"]
description = "HORUS - Hybrid Optimized Robotics Unified System framework for Rust"
license = "Apache-2.0"
repository = "https://github.com/softmata/horus"
keywords = ["robotics", "ros", "ipc", "real-time", "framework"]
categories = ["science::robotics", "embedded", "network-programming"]

[dependencies]
# Core HORUS components
horus_core = { path = "../horus_core" }
horus_macros = { path = "../horus_macros", optional = true }
horus_library = { path = "../horus_library" }  # Uses default features (standard-nodes)

# Re-export commonly used dependencies
serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["macros"]
macros = ["dep:horus_macros"]

# Minimal build without standard nodes (for embedded/constrained systems)
minimal = ["horus_library/default"]  # Explicitly disable standard-nodes

# Hardware feature flags - propagate to horus_library
# These are for hardware that requires physical devices
gpio-hardware = ["horus_library/gpio-hardware"]
i2c-hardware = ["horus_library/i2c-hardware"]
spi-hardware = ["horus_library/spi-hardware"]
can-hardware = ["horus_library/can-hardware"]
modbus-hardware = ["horus_library/modbus-hardware"]

# Sensor-specific features
bno055-imu = ["horus_library/bno055-imu"]
mpu6050-imu = ["horus_library/mpu6050-imu"]
rplidar = ["horus_library/rplidar"]
nmea-gps = ["horus_library/nmea-gps"]

# Vision nodes (requires OpenCV - heavy dependency)
vision = ["horus_library/vision"]

# Convenience bundles
full-hardware = ["horus_library/full-hardware"]
all-sensors = ["horus_library/all-sensors"]

# Advanced features from horus_core
cuda = ["horus_core/cuda"]
quic = ["horus_core/quic"]
tls = ["horus_core/tls"]
io-uring-net = ["horus_core/io-uring-net"]

# Legacy aliases (for backwards compatibility)
gilrs = ["horus_library/gilrs"]
crossterm = ["horus_library/crossterm"]
serial-hardware = ["horus_library/serial-hardware"]
opencv-backend = ["horus_library/opencv-backend"]
input-nodes = ["gilrs", "crossterm"]

[lib]
name = "horus"
path = "src/lib.rs"