[package]
name = "horus_core"
version = "0.1.7"
edition = "2021"

[lib]
name = "horus_core"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
log = "0.4"
libc = "0.2"
memmap2 = "0.9"
core_affinity = "0.8"  # CPU core pinning
tempfile = "3.0"
crossbeam = "0.8"
once_cell = "1.19"
num_cpus = "1.16"
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
regex = "1.10"
toml = "0.8"
bincode = "1.3"
bytemuck = { version = "1.14", features = ["derive"] }
ctrlc = "3.4"
colored = "2.0"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.10"
parking_lot = "0.12"
cranelift = "0.110"
cranelift-jit = "0.110"
cranelift-module = "0.110"
cranelift-native = "0.110"
chrono = { version = "0.4", features = ["serde", "std"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
lazy_static = "1.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# TLS/Security (optional)
rustls = { version = "0.23", optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2.1", optional = true }
rcgen = { version = "0.13", optional = true }  # For self-signed certs

# QUIC transport (optional)
quinn = { version = "0.11", optional = true }

# Macros (optional)
horus_macros = { path = "../horus_macros", optional = true }

# HTTP client for model downloading (optional)
reqwest = { version = "0.11", features = ["blocking"], optional = true }

# Platform-specific: Windows shared memory
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Memory", "Win32_Security", "Win32_System_Threading"] }

# Platform-specific: Linux io_uring (optional)
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.6", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "cuda_ipc_benchmark"
harness = false
required-features = ["cuda"]

[features]
default = ["macros"]
macros = ["horus_macros"]
rtos = []
tls = ["rustls", "tokio-rustls", "rustls-pemfile", "rcgen"]
quic = ["quinn", "rustls", "rcgen"]
io-uring-net = ["io-uring"]
ultra-low-latency = ["io-uring-net"]  # Enable io_uring for lowest latency
network-v2 = []  # Enable all network v2 optimizations
rt-linux = ["rtos"]
freertos = ["rtos"]
zephyr = ["rtos"]
qnx = ["rtos"]
bare-metal = ["rtos"]
cuda = []  # Enable CUDA IPC for cross-process GPU memory sharing
