[package]
name = "horus_library"
version = "0.1.7"
edition = "2021"
authors = ["HORUS Contributors"]
description = "Standard library of messages, nodes, and algorithms for HORUS"
license = "Apache-2.0"
repository = "https://github.com/softmata/horus"
keywords = ["robotics", "messages", "nodes", "horus"]
categories = ["science::robotics"]

[lib]
name = "horus_library"
path = "lib.rs"

[dependencies]
horus_core = { path = "../horus_core" }
serde = { workspace = true }
serde_json = { workspace = true }
bytemuck = { workspace = true }
rand = { workspace = true }
thiserror = "1.0"
rmp-serde = "1.1"
bincode = "1.3"
serde_arrays = "0.1"
colored = { version = "2.0", optional = true }

# Optional hardware dependencies
# Note: Hardware features are opt-in to avoid heavy dependencies for basic message usage
opencv = { version = "0.92", optional = true }
v4l = { version = "0.14", optional = true }
rppal = { version = "0.14", optional = true }  # Raspberry Pi GPIO
sysfs_gpio = { version = "0.6", optional = true }  # Linux sysfs GPIO interface
serialport = { version = "4.2", optional = true }
socketcan = { version = "3.1", optional = true }
i2cdev = { version = "0.6", optional = true }
libc = { version = "0.2", optional = true }
spidev = { version = "0.6", optional = true }
gilrs = { version = "0.10", optional = true }  # Gamepad input
crossterm = { version = "0.27", optional = true }  # Terminal/keyboard
tokio-modbus = { version = "0.9", optional = true }
bno055 = { version = "0.4", optional = true }  # BNO055 IMU
mpu6050 = { version = "0.1", optional = true }  # MPU6050 IMU
icm20948 = { version = "0.0.1", optional = true }  # ICM-20948 9-axis IMU
linux-embedded-hal = { version = "0.3", optional = true }  # Linux I2C/SPI HAL (v0.3 for embedded-hal 0.2 compatibility with mpu6050/bno055)
# rplidar_drv has a compilation bug in recent Rust versions (unaligned packed struct reference)
# Keeping feature flag for conditional compilation, but driver crate is disabled until upstream is fixed
nmea = { version = "0.5", optional = true }  # GPS NMEA parsing
sysinfo = { version = "0.30", optional = true }  # System monitoring

# ML/AI dependencies
ort = { version = "=2.0.0-rc.10", optional = true }  # ONNX Runtime
tflite = { version = "0.9", optional = true }  # TensorFlow Lite
ndarray = { version = "0.16", optional = true }  # N-dimensional arrays
image = { version = "0.24", optional = true }  # Image processing
imageproc = { version = "0.23", optional = true }  # Image processing algorithms
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }  # HTTP client for LLM APIs

[features]
# Enable common software nodes by default
# Users can opt-out with: default-features = false
default = ["standard-nodes"]

# Standard nodes that work on any system (lightweight, no heavy deps)
# These are enabled by default for best user experience
standard-nodes = [
    "gilrs",           # JoystickInputNode (needs libudev, installed by install.sh)
    "crossterm",       # KeyboardInputNode (pure Rust)
    "sysinfo",         # System monitoring (pure Rust)
]
# Note: serial-hardware feature removed from defaults - requires hardware serial port drivers
# Enable with: horus = { features = ["serial-hardware"] }

# Vision nodes - requires OpenCV (heavy dependency, opt-in)
# Enable with: horus = { features = ["vision"] }
vision = [
    "opencv-backend",
    "v4l2-backend",
]

# Hardware backend features
opencv-backend = ["opencv"]
v4l2-backend = ["v4l"]
realsense = []  # Feature flag for conditional compilation (no crate dependency)
zed = []  # Feature flag for conditional compilation (no crate dependency)

# Platform features
raspberry-pi = ["rppal"]

# Hardware interface features
serial-hardware = ["serialport"]
can-hardware = ["socketcan"]
i2c-hardware = ["i2cdev", "libc"]
spi-hardware = ["spidev"]
gpio-hardware = ["rppal", "sysfs_gpio"]
modbus-hardware = ["tokio-modbus"]

# Input device features
gilrs = ["dep:gilrs"]
crossterm = ["dep:crossterm", "colored"]

# Sensor-specific features
bno055-imu = ["bno055", "i2c-hardware", "linux-embedded-hal"]
mpu6050-imu = ["mpu6050", "i2c-hardware", "linux-embedded-hal"]
icm20948-imu = ["icm20948", "i2c-hardware", "linux-embedded-hal"]
nmea-gps = ["nmea", "serial-hardware"]
rplidar = ["serial-hardware"]  # Note: rplidar_drv crate disabled due to upstream bug
linux-embedded-hal = ["dep:linux-embedded-hal"]
netft = []  # Feature flag (hardware support without crate dependency)
robotiq-serial = ["serial-hardware"]  # Robotiq FT-300 force/torque sensor
sysinfo = ["dep:sysinfo"]

# ML/AI features
onnx = ["ort", "ndarray", "image", "imageproc"]
tflite-inference = ["tflite", "ndarray", "image", "imageproc"]
ml-inference = ["onnx", "reqwest"]
cuda = []  # GPU acceleration for ML inference (requires CUDA toolkit)

# Convenience feature bundles
full-hardware = [
    "opencv-backend",
    "v4l2-backend",
    "serial-hardware",
    "can-hardware",
    "i2c-hardware",
    "spi-hardware",
    "gpio-hardware",
    "modbus-hardware",
    "gilrs",
    "crossterm",
]

# Note: bno055-imu, mpu6050-imu, and icm20948-imu are excluded due to embedded-hal version conflicts
# between the driver crates (bno055 needs v1.0, mpu6050/icm20948 need v0.2).
# Enable them individually if needed on compatible setups.
all-sensors = [
    "nmea-gps",
    "rplidar",
    "netft",
    "robotiq-serial",
    "sysinfo",
]

