[package]
name = "sim3d"
version = "0.1.6"
edition = "2021"
description = "3D robotics simulator with RL support"
license = "MIT OR Apache-2.0"
authors = ["HORUS Team"]

[[bin]]
name = "sim3d"
path = "src/main.rs"

[lib]
name = "sim3d"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["visual"]

# Visual mode - full 3D rendering
visual = [
    "bevy/default",
    "bevy_egui",
    "egui_dock",
    "rfd",
]

# Headless mode - no rendering
headless = []

# Editor tools
editor = [
    "visual",
    "bevy_editor_pls",
]

# Python bindings for RL
python = [
    "pyo3",
    "numpy",
]

# All features
full = [
    "visual",
    "editor",
    "python",
]

[dependencies]
# HORUS Core
horus_core = { path = "../../../horus_core" }
horus_library = { path = "../.." }

# 3D Physics (CRITICAL: Use exact version to avoid breaking changes)
rapier3d = { version = "0.22", features = ["serde-serialize", "simd-stable"] }
nalgebra = { version = "0.33", features = ["serde-serialize"] }
parry3d = "0.17"  # Collision detection (comes with rapier3d)

# 3D Rendering
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "hdr",
    "ktx2",
    "zstd",
    "x11",  # Linux
    "wayland",  # Linux alternative
    "tonemapping_luts",
    "default_font",
] }

# GUI & Editor (only with "visual" feature)
bevy_egui = { version = "0.31", optional = true }
bevy_editor_pls = { version = "0.9", optional = true }
egui_dock = { version = "0.14", optional = true }
rfd = { version = "0.15", optional = true }  # Native file dialogs

# URDF Support
urdf-rs = "0.8"
roxmltree = "0.20"  # XML parsing

# Asset Loading
gltf = { version = "1.4", features = ["extras", "names"] }
image = { version = "0.25", features = ["png", "jpeg", "dds", "tga"] }
png = "0.17"              # PNG heightmap loading

# Mesh Loading
tobj = "4.0"              # OBJ loader
stl_io = "0.7"            # STL loader
collada = "0.15"          # COLLADA loader
zip = "2.1"               # USDZ archive support

# USD/USDC/USDZ Support (Pixar's Universal Scene Description)
openusd = "0.1"           # Pure Rust USD reader (USDA, USDC binary, USDZ)

# Additional Format Support
regex = "1.10"            # Xacro macro processing
tempfile = "3.10"         # Temporary file for xacro output

# Validation
jsonschema = "0.18"       # JSON Schema validation
semver = "1.0"            # Semantic version parsing and validation
schemars = "0.8"          # Schema generation

# Asset Management
lru = "0.12"              # LRU cache
dashmap = "6.0"           # Concurrent hashmap

# Geometry Processing
lyon_tessellation = "1.0" # Tessellation

# Utilities
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
rmp-serde = "1.1"
chrono = "0.4"
bytemuck = { version = "1.18", features = ["derive"] }
flate2 = "1.0"  # Gzip compression

# CLI
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"              # File pattern matching

# Parallel Processing (for RL)
rayon = "1.10"

# Python Bindings (for RL)
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
numpy = { version = "0.27", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Math utilities
glam = "0.29"  # Bevy uses glam internally

# Random number generation
rand = "0.8"
rand_distr = "0.4"
fastrand = "2.0"

# Procedural generation
noise = "0.9"

# Path utilities
pathdiff = "0.2"
shellexpand = "3.1"  # Tilde expansion in paths
dirs = "5.0"        # Cross-platform directories

# Bit flags
bitflags = "2.6"

# GPU Acceleration
wgpu = "23.0"
futures = "0.3"
pollster = "0.4"  # Block on async for GPU initialization

# Plugin System
libloading = "0.8"  # Dynamic library loading
toml = "0.8"        # TOML configuration parsing

[dev-dependencies]
criterion = "0.5"
approx = "0.5"
tempfile = "3.8"
bevy_rapier3d = "0.28"  # For physics integration tests

[build-dependencies]
# None required unless adding shader compilation
